--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.7
-    working_directory: ~/Docker_train/src
+    working_directory: ~/docker_train/src
     steps:
       - checkout:
-          path: ~/Docker_train
+          path: ~/docker_train
       - ruby/install-deps
 
   test:
@@ -26,10 +26,10 @@ jobs:
       BUNDLE_RETRY: "3"
       APP_DATABASE_HOST: "127.0.0.1"
       RAILS_ENV: test
-    working_directory: ~/Docker_train/src
+    working_directory: ~/docker_train/src
     steps:
       - checkout:
-          path: ~/Docker_train
+          path: ~/docker_train
       - ruby/install-deps
       - run:
           name: Database setup
