--- a/src/Gemfile
+++ b/src/Gemfile
@@ -54,4 +54,4 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-gem 'mini_racer'
+gem 'mini_racer', '~> 0.3.1'
